--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -364,7 +364,7 @@ ctk_enable_option(DICOMApplicationHosting "Enable DICOM Part 19 Application Host
 # The CTK Qt Widgets. This will enable the Qt Widget library only.
 # It might trigger the enabling of other widget libraries in combination
 # with other enabled options.
-ctk_enable_option(Widgets "Enable Qt Widget libraries" OFF
+ctk_enable_option(Widgets "Enable Qt Widget libraries" ON
                   CTK_LIB_Widgets)
 
 # The CTK Plugin Framework, a dynamic component system based on OSGi.
